k8s-demo/pydbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pydb
  name: dbsvc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: pydb
  type: LoadBalancer
status:
  loadBalancer: {}
