k8s-demo/pywebsvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pyweb
  name: pyweb
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: pyweb
  type: LoadBalancer
status:
  loadBalancer: {}
